Sun May 18 2003 Lachlan Andrew  <lha@users.sourceforge.net>

	* db/mp_alloc.c: Hopefully the *last* fix for this morning's patch...

	* configure, aclocal.m4, acinclude.m4:
	  Look for  httpd  modules in  .../libexec/httpd  for OS X
	* test/conf/httpd.conf: Disabled mod_auth_db, mod_log{agent,referer}.

Sun May 18 2003 Lachlan Andrew  <lha@users.sourceforge.net>

	* db/db.h.in: Declare variable introduced in  db/mp_cmpr.c  patch

Sun May 18 2003 Lachlan Andrew  <lha@users.sourceforge.net>

	* db/mp.h, db/mp_{alloc,bh,cmpr,region}.c,
	* htword/WordDB.cc, htdig/htdig.cc:
	  Avoid infinite loop if memp_alloc  has only dirty,
	  "weakly compressed" (i.e. overflow) pages.
	* htcommon/defaults.cc:  Document the above, plus misc updates.

	* htword/WordDBPage.h:
	  Cast sizeof() to (int) in printf()s to avoid compiler warnings.

Sun APR 20 2003 Lachlan Andrew  <lha@users.sourceforge.net>

	* htdig/htdig.cc:  delete  db.words.db_weakcmpr  if  -i  specified.

Wed Feb 26 22:10:40 CET 2003 Gabriele Bartolini <angusgb@users.sourceforge.net>

	* htnet/HtHTTP.cc: fixed colon (':') problem with HTTP header parsing,
	  as Frank Passek, Gilles and others suggested, as space is not
	  mandatory between the field declaration and the field value returned
	  by the server

Sun Feb 23 10:20:58 CET 2003 Gabriele Bartolini <angusgb@users.sourceforge.net>

	* htcommon/defaults.[cc,xml]: added the 'cookies_input_file'
	  configuration attribute for pre-loading cookies in memory
	* htdig/htdig.cc: added the feature above; the code automatically
	  loads the cookies from the input file into the 'jar' that will be
	  used during the crawl.

Sun Feb 23 10:16:08 CET 2003 Gabriele Bartolini <angusgb@users.sourceforge.net>

	* htnet/HtHTTP.h: removed the NULL pointer check before assigning a
	  new jar to the HTTP code

Tue Feb 11 2003  Lachlan Andrew  <lha@users.sourceforge.net>

	* htcommon/defaults.cc:  Set default  compression_level  to 6,