@@ -10,7 +10,7 @@
 	  Installation
 	</h1>
 	<p>
-	  ht://Dig Copyright &copy; 1995-2001 <a href="THANKS.html">The ht://Dig Group</a><br>
+	  ht://Dig Copyright &copy; 1995-2003 <a href="THANKS.html">The ht://Dig Group</a><br>
 	  Please see the file <a href="COPYING">COPYING</a> for
 	  license information.
 	</p>
@@ -21,6 +21,9 @@
 	  The main sections are:
 	</p>
 	<ul>
+	  <li>
+		<a href="#simple">For the impatient...</a>
+	  </li>
 	  <li>
 		<a href="where.html">Getting the software</a>
 	  </li>
@@ -42,7 +45,23 @@
 	  <li>
 		<a href="#sharelib">Shared Libraries</a>
 	  </li>
+	  <li>
+		<a href="OSs">Notes for particular operating systems</a>
+	  </li>
 	</ul>
+	<hr noshade>
+	<h2>
+	  <a name="simple">For the impatient...</a>
+	</h2>
+	<p>
+	  The standard GNU installation process works for ht://Dig.<br>
+	  <code>./configure --prefix=/usr/local</code><br>
+	  <code>make</code><br>
+	  <code>make install</code><br>
+	  (The final command must be issued as root.)
+	</p>
+	<hr noshade>
+	<p></p>
 	<hr noshade>
 	<h2>
 	  <a name="extract">Extracting the software</a>
@@ -90,15 +109,16 @@
 	</p>
 -->
 	<p>
-	  Before running configure you can optionally add dependency information
-	  to all the Makefiles with the command
+	  If you are going to change any of the sources to  ht://Dig, then
+	  you can optionally add dependency information
+	  to all the Makefiles before running configure with the command
 	</p>
 	<blockquote>
 	  % <strong>automake</strong>
 	</blockquote>
 	<p>
-	  This only needs to be done if you are going to change any of
-	  the sources to ht://Dig and requires <strong>GCC</strong>.
+	  This <strong>only</strong> needs to be done if you are going to change
+	  any of the sources to ht://Dig and requires <strong>GCC</strong>.
 	</p>
 	<p>
 	  The <strong>configure</strong> program has some ht://Dig specific options
@@ -227,7 +247,7 @@
 	  <code>--enable-tests</code> at configure time. These tests
 	  require that you have a working
 	  <a href=http://www.apache.org/>Apache</a> daemon available with
-	  version >= 1.3.1. To run the tests execute:
+	  version &gt;= 1.3.1. To run the tests execute:
 	</p>
 	<p>
 	  If your <a href=http://www.apache.org/>Apache</a> daemon is 
@@ -429,10 +449,25 @@
 	  This is really system dependent and you must check your 
 	  documentation.  
 	</p>
+	<hr noshade>
+	<h2>
+	<a name="OSs">Notes for particular operating systems</a>
+	</h2>
+	<p>
+	<strong>Mac OS X</strong> cannot handle ht://Dig's shared libraries.
+	    Use<br> <code>./configure --disable-shared --enable-static</code>
+	</p>
+	<p>
+	<strong>BSD</strong> make does not handle ht://Dig's Makefiles.
+	    Use <a href="ftp://ftp.gnu.org/pub/gnu/">GNU's gmake</a>.
+	</p>
+	<p>
+	<strong>HP-UX 10.20</strong> does not handle ./configure.  Sorry.
+	</p>
 	<hr size="4" noshade>
 	  <a href="author.html">Andrew Scherpbier &lt;andrew@contigo.com&gt; &amp; the ht://Dig Group</a>
-
-	Last modified: $Date: 2002/02/01 22:49:32 $
+	<br>
+	Last modified: $Date: 2003/05/22 11:49:12 $
 
   </body>
 </html>
